src/objects/PSA_Forecast__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds settings related to billing and revenue forecast calculations</description>
    <fields>
        <fullName>PSA_Forecast_Category_Percent_Committed__c</fullName>
        <description>Probability percentage associated with the Committed forecast category</description>
        <label>Forecast Category Percent - Committed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Category_Percent_Forecast__c</fullName>
        <description>Probability percentage associated with the Forecast forecast category</description>
        <label>Forecast Category Percent - Forecast</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Category_Percent_Pipeline__c</fullName>
        <description>Probability percentage associated with the Pipeline forecast category</description>
        <label>Forecast Category Percent - Pipeline</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Category_Percent_Sales__c</fullName>
        <description>Probability percentage associated with the Sales forecast category</description>
        <label>Forecast Category Percent - Sales</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Forecast_Category_Percent_Upside__c</fullName>
        <description>Probability percentage associated with the Upside forecast category</description>
        <label>Forecast Category Percent - Upside</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>PSA Forecast</label>
</CustomObject>